# ManageNG

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
scripts/: generate-app-icon.py  generate-installer-assets.py
src/: App.tsx  api.ts  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  profiles.rs
src-tauri/src/beamng/: cleanup.rs  conflicts.rs  mod.rs  mods.rs  paths.rs  repository.rs
src/components/: Dashboard.tsx  ErrorBoundary.tsx  ModList.tsx  Profiles.tsx  Repository.tsx  SettingsSheet.tsx  Tools.tsx
src/components/shell/: AppShell.tsx
src/components/ui/: primitives.tsx
src/navigation/: NavigationProvider.tsx  types.ts
src/pages/: BrowsePage.tsx  HomePage.tsx  ProfileDetailPage.tsx  ProfilesPage.tsx  ToolsPage.tsx
src/store/: AppProvider.tsx  persistence.ts  settings.ts
src/styles/: global.css  tokens.css
